--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "module-13-challenge-orm",
-  "version": "1.0.0",
-  "description": "",
+  "name": "e-commerce-be",
+  "version": "0.0.1",
+  "description": "An ORM for a mock E-Commerce backend application.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
+    "test": "npm run seed && jest --watch --coverage --detectOpenHandles",
+    "testAll": "npm run seed && jest --watchAll --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git@github.com:brennan64/e-commerce-be.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Brennan Heley",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "jest": "^28.0.3",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.0"
+  },
+  "jest": {
+    "globalSetup": "./tests/utils/globalSetup.js"
   }
 }
